--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -12,4 +12,9 @@ jobs:
 
     steps:
     - name: Run a one-line script
-      run: ls -al /dev/kvm
+      env:
+        DEBIAN_FRONTEND: noninteractive
+      run: |
+        apt -q update
+        apt -q -y install kmod qemu-kvm
+        kvm-ok
