--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,14 @@ env:
 jobs:
   include:
     - name: testing
-      script: ./run_tests.sh
+      script: |
+        apt-get update
+        apt-get -qy install ansible openssh-server
+        ssh-keygen -b 4096 -t rsa -f /tmp/sshkey -q -N ""
+        mkdir -vp ~/.ssh && chmod 0700 ~/.ssh
+        cat /tmp/sshkey.pub >> ~/.ssh/authorized_keys && chmod 0700 .ssh/authorized_keys
+        systemctl enable --now ssh
+        export ANSIBLE_CONFIG=ansible.cfg
+        export ANSIBLE_PRIVATE_KEY_FILE=/tmp/sshkey
+        ansible-playbook -i localhost, playbook.yml
+        journalctl --boot
