--- a/ansible.cfg
+++ b/ansible.cfg
@@ -6,5 +6,5 @@ stdout_callback = yaml
 deprecation_warnings = False
 host_key_checking = False
 
-[ssh_connection]
-pipelining = True
+; [ssh_connection]
+; pipelining = True
