Just use a password instead

--- a/playbook.yml
+++ b/playbook.yml
@@ -39,7 +39,6 @@
       command: |
         virt-customize -v -x -a /tmp/{{ fedora_qcow }} \
           --root-password password:secrete \
-          --ssh-inject fedora:file:/tmp/sshkey.pub \
           --uninstall cloud-init
       become: yes
 
@@ -72,8 +71,8 @@
         name: test_vm
         group: testing_instances
         ansible_host: "{{ vm_ip }}"
-        ansible_user: fedora
-        ansible_private_key_file: /tmp/sshkey
+        ansible_user: root
+        ansible_password: secrete
         ansible_ssh_pipelining: yes
 
     - name: Wait for the ssh daemon to start
