Set the group in the dynamic hosts

--- a/playbook.yml
+++ b/playbook.yml
@@ -99,6 +99,7 @@
       copy:
         dest: /tmp/hosts.ini
         content: |
+          [test_instances]
           test_vm ansible_host={{ vm_ip }} ansible_user=fedora ansible_password=secrete ansible_ssh_pipelining=True
 
     - name: Clone ansible-osbuild
