Break out test into script

--- a/playbook.yml
+++ b/playbook.yml
@@ -9,9 +9,15 @@
         - http://mirrors.kernel.org/fedora/releases/{{ testing_os_version }}/Cloud/x86_64/images
     qcow:
       fedora:
-        "31": Fedora-Cloud-Base-31-1.9.x86_64.qcow2
-        "32": Fedora-Cloud-Base-32-1.6.x86_64.qcow2
+        31: Fedora-Cloud-Base-31-1.9.x86_64.qcow2
+        32: Fedora-Cloud-Base-32-1.6.x86_64.qcow2
   tasks:
+
+    - name: Dump the testing OS + version
+      debug:
+        msg: |
+          testing_os: {{ testing_os }}
+          testing_os_version: {{ testing_os_version }}
 
     - name: Set the mirror and qcow file for downloading
       set_fact:
