--- a/.travis.yml
+++ b/.travis.yml
@@ -34,10 +34,5 @@ addons:
 
 install: ./install.sh
 
-script: |
-  ansible-playbook -i localhost, playbook.yml
-  ansible-playbook \
-    -i /tmp/hosts.ini \
-    -e testing_os=${TESTING_OS} \
-    -e testing_os_version=${TESTING_OS_VERSION} \
-    /tmp/ansible-osbuild/playbook.yml
+script: ./run_tests.sh
+
